# steganography-AES-CLI.

./: .gitignore  cli.py  gui.py  pyproject.toml  readm.md
stego/: crypto.py  embedder.py  extractor.py
tests/: test_crypto.py  test_crypto_manual.py  test_embed_extract.py
